feat(rag): wire CLI to RAG, stabilize OpenAI calls, and harden crawler
- CLI: use RetrievalService + getChatCompletionFromChunks() so answers rely on crawled context.
- GPTService: switch to /v1/chat/completions with response_format=json_object; robust JSON parsing; fallbacks for empty body; distinct sources; max_tokens honored.
- Retrieval: better scoring (query token overlap, URL signal for career/retail pages); safe truncation with ellipsis; null-safe tokenization.
- Crawler: BFS crawl with depth & page limits; normalized URL/origin handling (www & query kept, fragment stripped); headless Chrome; DOM ready wait; richer text extraction; PDF text via Tika; skip binaries/mailto/js; configurable timeouts.
- Bootstrap: optional startup crawl via app.crawl.*; WebDriverManager setup; resilient logging when 0 pages.
- SiteContent: chunking large pages, thread-safe load; plain text aggregator for /api/chat/site-content.
- Properties: defaults for model=gpt-4o-mini, temperature, max tokens, crawl flags; document OPENAI_API_KEY usage.

Fixes:
- \"Unknown parameter text_format\" -> use response_format for chat.completions.
- Truncated/empty payload parsing -> safe JSON handling.
- CLI returning 'I don't know' due to empty context -> pass retrieved chunks.